samples/_failures_safe/1761279459_b11b53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e195201.c: In function ‘main’:
./samples/SAFE/__tmp_6e195201.c:151:43: error: expected ‘)’ at end of input
  151 |     if (fgets(input, sizeof(input), stdin)
      |        ~                                  ^
      |                                           )
./samples/SAFE/__tmp_6e195201.c:151:5: error: expected declaration or statement at end of input
  151 |     if (fgets(input, sizeof(input), stdin)
      |     ^~
